--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,7 @@ jobs:
     - name: docker-login
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
-        DOCKER_PSWRD: ${ secrets.DOCKER_PASSWORD }}
+        DOCKER_PSWRD: ${{ secrets.DOCKER_PASSWORD }}
       run: |
         echo "Iniciando Login"
         docker login -u $DOCKER_USER -p $DOCKER_PSWRD
