--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,7 +24,7 @@ jobs:
         DOCKER_PSWRD: ${{ secrets.DOCKER_PASSWORD }}
       run: |
         echo "Iniciando Login"
-        docker login -u $DOCKER_USER -p $DOCKER_PSWRD
+        docker login --username $DOCKER_USER --password $DOCKER_PSWRD
         echo "Fin de login"
     # - name: Build the Docker image
     #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
